--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
+    "rateyo": "^2.3.2",
     "slick-carousel": "^1.8.1"
   }
 }
